# nosql_orm

./: .gitignore  Cargo.toml  README.md  plan.md  plan_indexes.md
docs/: 00-table-of-contents.md  01-introduction.md  02-entity.md  03-provider.md  04-repository.md  05-query-builder.md  06-relations.md  08-examples.md  09-api-reference.md  documentation.md
docs/07-features/: 07a-macros.md  07b-validators.md  07c-soft-delete.md  07d-timestamps.md  07e-migrations.md  07f-indexes.md  07g-events.md  07h-cascade.md  07i-lazy.md  07j-embedded.md  07k-inheritance.md  07l-search.md  07m-aggregation.md  07n-cdc.md  07o-graphql.md  07p-subscription.md  07q-cache.md  07r-sql.md  07s-logging.md  README.md
examples/: decorator_example.rs  deep_relation_loading.rs  derive_entity_test.rs  index_example.rs  json_example.rs  migrations_example.rs  mongo_example.rs  nested_relations_5_levels.rs  postgres_example.rs  projection_example.rs  relation_filter_example.rs  soft_delete_example.rs  sql_example.rs  sql_mysql_example.rs  sql_postgres_example.rs  taskflow_like.rs  test_macro.rs  test_snake_case.rs  todo_tasks_subtasks.rs  todo_with_all_relations.rs
nosql_orm_derive/: Cargo.toml
nosql_orm_derive/src/: entity.rs  lib.rs  validate.rs
src/: cascade.rs  entity.rs  error.rs  field_meta.rs  lib.rs  macros.rs  provider.rs  query.rs  relations.rs  repository.rs  soft_delete.rs  timestamps.rs  transaction.rs  utils.rs
src/aggregation/: accumulators.rs  mod.rs  pipeline.rs  stages.rs
src/cache/: mod.rs  query_cache.rs
src/cdc/: audit.rs  change_data_capture.rs  change_stream.rs  mod.rs  sync.rs
src/cli/: commands.rs  migrator.rs  mod.rs  seeder.rs
src/constraints/: column.rs  index.rs  mod.rs
src/embedded/: embedded_impl.rs  embedder.rs  mod.rs
src/events/: event.rs  listener.rs  mod.rs
src/graphql/: mod.rs  resolver.rs  schema.rs  types.rs
src/id/: generator.rs  mod.rs  strategy.rs
src/inheritance/: discriminator.rs  inheritance_impl.rs  mod.rs
src/lazy/: lazy_loader.rs  lazy_relation.rs  mod.rs
src/logging/: db_query_logger.rs  file_query_logger.rs  mod.rs  query_logger.rs
src/migrations/: migration.rs  mod.rs  runner.rs  source.rs
src/nosql_index/: manager.rs  mod.rs
src/pool/: mod.rs  pool.rs  pool_impl.rs
src/providers/: json.rs  mod.rs  mongo.rs  postgres.rs  redis.rs  sqlite.rs
src/providers/sql/: mod.rs  mysql.rs  postgres.rs  row.rs  sqlite.rs  utils.rs
src/schema/: mod.rs  prefix.rs  schema.rs  schema_impl.rs
src/search/: fulltext.rs  mod.rs  search_impl.rs
src/sql/: mod.rs  query.rs  types.rs
src/subscription/: mod.rs  publisher.rs  subscription.rs
src/validators/: mod.rs  validate_trait.rs  validation_error.rs  validators.rs  validators_impl.rs
tests/: test_entity.rs  test_error.rs  test_filter.rs  test_nosql_index.rs  test_projection.rs  test_query_builder.rs  test_relations.rs  test_sql_query_builder.rs  test_timestamps.rs  test_utils.rs  test_validation_error.rs  test_validators.rs
