[package]
name = "nosql_orm_derive"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
serde_json = "1.0"
regex = "1.10"
chrono = "0.4"
uuid = { version = "1", features = ["serde"] }
url = "2.5"

[lib]
proc-macro = true